--- a/src/index.css
+++ b/src/index.css
@@ -23,39 +23,25 @@ code {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.nav-item {
+/* .nav-item {
   padding-right: 30px;
-}
+} */
 
-.navbar{
+/* .navbar{
   background: #134b72;
   padding: 20px;
   -webkit-transition-duration: 0.4s;
   transition-duration: 0.4s; 
-}
-/*
-.navbar:hover {
-  background: #fff;
-}
-*/
-.navbar-brand{
-  color: #fff;
-}
-.nav-link{
-  color: rgb(200, 200, 200);
-}
+} */
 
-.nav-link:hover{
-  color: #fff;
-}
 
-.navbar-toggler-icon {
+/* .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(33,199,200)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
-}
+} */
 
-.navbar-toggler {
+/* .navbar-toggler {
   margin: none;
-} 
+}  */
 #welcome-div{
   background: rgb(240, 240, 240);
   padding: 20px;
